--- a/requirements.txt
+++ b/requirements.txt
@@ -33,5 +33,6 @@ psycogreen==1.0.2
 psycopg2==2.9.9
 redis==5.0.7
 requests==2.32.3
-safe-eth-py[django]==6.0.0b35
+git+https://github.com/protofire/safe-eth-py.git@shape-network#egg=safe-eth-py
+#safe-eth-py[django]==6.0.0b35
 web3==6.20.2
